[gd_scene load_steps=4 format=3 uid="uid://c6a0rjrc13kel"]

[ext_resource type="Theme" uid="uid://chwr8vock83p4" path="res://assets/themes/dark_dcl_theme/dark_dcl_theme.tres" id="1_an4wy"]
[ext_resource type="Script" path="res://src/ui/components/line_edit_command/line_edit_command.gd" id="1_llajn"]
[ext_resource type="Texture2D" uid="uid://c5h83d44qsbhr" path="res://assets/themes/dark_dcl_theme/icons/Chat.svg" id="3_362s3"]

[node name="Control_Talk" type="HBoxContainer"]
offset_right = 729.0
offset_bottom = 36.0
theme = ExtResource("1_an4wy")
script = ExtResource("1_llajn")

[node name="Button_OpenChat" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 48
icon = ExtResource("3_362s3")
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer_Send" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer_Send"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 4

[node name="LineEdit_Command" type="LineEdit" parent="HBoxContainer_Send/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
placeholder_text = "Write your message here..."

[node name="Button_Send" type="Button" parent="HBoxContainer_Send"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 48
text = "Send"
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Button_OpenChat" to="." method="_on_button_open_chat_pressed"]
[connection signal="text_submitted" from="HBoxContainer_Send/MarginContainer/LineEdit_Command" to="." method="_on_line_edit_command_text_submitted"]
[connection signal="pressed" from="HBoxContainer_Send/Button_Send" to="." method="_on_send_pressed"]
